--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -5,7 +5,7 @@
     justify-content: center;
     align-items: center;
     position: absolute;
-    top: 30%;
+    top: 200px;
     left: 0;
     z-index: 9;
 }
